refactor: remove hand-written index files
Use `package.json` metadata like `main`, `server` and `types`
to redirect package consumers to `dist/index.js` and `dist/index.d.ts`
instead.

- This is the first commit where I am moving logic from `/index.js`
  to `src/index.js` only.

Signed-off-by: Miroslav Bajtoš <mbajtoss@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@loopback/rest-explorer",
   "version": "2.2.0",
   "description": "LoopBack's API Explorer",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=10"
   },
@@ -39,8 +41,6 @@
   ],
   "files": [
     "README.md",
-    "index.js",
-    "index.d.ts",
     "dist",
     "src",
     "!*/__tests__",
